--- a/index.html
+++ b/index.html
@@ -356,8 +356,31 @@
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         images: [
           "images/car1.jpg",
-          "images/ford_fiesta_extra1.jpg",
-          "images/ford_fiesta_extra2.jpg"
+          "images/car1_extra1.jpg",
+          "images/car1_extra2.jpg",
+          "images/car1_extra3.jpg",
+          "images/car1_extra4.jpg",
+          "images/car1_extra5.jpg",
+          "images/car1_extra6.jpg",
+          "images/car1_extra7.jpg",
+          "images/car1_extra8.jpg",
+          "images/car1_extra9.jpg",
+          "images/car1_extra10.jpg",
+          "images/car1_extra11.jpg",
+          "images/car1_extra12.jpg",
+          "images/car1_extra13.jpg",
+          "images/car1_extra14.jpg",
+          "images/car1_extra15.jpg",
+          "images/car1_extra16.jpg",
+          "images/car1_extra17.jpg",
+          "images/car1_extra18.jpg",
+          "images/car1_extra19.jpg",
+          "images/car1_extra20.jpg",
+          "images/car1_extra21.jpg",
+          "images/car1_extra22.jpg",
+          "images/car1_extra23.jpg",
+          "images/car1_extra24.jpg",
+          "images/car1_extra25.jpg",
         ],
         link: "https://www.standvirtual.com/carros/anuncio/ford-fiesta-ver-1-25-trend-ID8PSj6T.html?isPreview=1"
       },
@@ -367,7 +390,11 @@
         kms: "239 400 km",
         year: "2011",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car2.jpg"],
+        images: [
+          "images/car2.jpg",
+          "images/car2_extra1.jpg",
+          "images/car2_extra2.jpg"
+        ],
         link: "https://www.standvirtual.com/carros/anuncio/opel-astra-ver-1-7-cdti-cosmo-ID8PSd30.html?isPreview=1"
       },
       {
@@ -376,7 +403,11 @@
         kms: "218 541 km",
         year: "2017",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car3.jpg"],
+        images: [
+          "images/car3.jpg",
+          "images/car3_extra1.jpg",
+          "images/car3_extra2.jpg"
+        ],
         link: "https://www.standvirtual.com/comerciais/anuncio/peugeot-peugeot-partner-1-6-hdi-100-cv-3-lug-premier-automtica-ID8PNI32.html?isPreview=1"
       },
       {
@@ -385,7 +416,11 @@
         kms: "343 211 km",
         year: "2004",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car4.jpg"],
+        images: [
+          "images/car4.jpg",
+          "images/car4_extra1.jpg",
+          "images/car4_extra2.jpg"
+        ],
         link: "https://www.standvirtual.com/carros/anuncio/mini-mini-3p-ver-1-4-d-ID8PSt7x.html?isPreview=1"
       },
       {
@@ -394,7 +429,11 @@
         kms: "152 621 km",
         year: "2016",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car5.jpg"],
+        images: [
+          "images/car5.jpg",
+          "images/car5_extra1.jpg",
+          "images/car5_extra2.jpg"
+        ],
         link: "https://www.standvirtual.com/carros/anuncio/citroen-c5-tourer-ver-2-0-bluehdi-seduction-j17-ID8PRV3m.html?isPreview=1"
       },
       {
@@ -403,7 +442,11 @@
         kms: "133 856 km",
         year: "2007",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car6.jpg"],
+        images: [
+          "images/car6.jpg",
+          "images/car6_extra1.jpg",
+          "images/car6_extra2.jpg"
+        ],
         link: "#"
       },
       {
@@ -412,7 +455,11 @@
         kms: "168 404 km",
         year: "2010",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car7.jpg"],
+        images: [
+          "images/car7.jpg",
+          "images/car7_extra1.jpg",
+          "images/car7_extra2.jpg"
+        ],
         link: "#"
       },
       {
@@ -421,7 +468,11 @@
         kms: "182 230km",
         year: "2002",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
-        images: ["images/car8.jpg"],
+        images: [
+          "images/car8.jpg",
+          "images/car8_extra1.jpg",
+          "images/car8_extra2.jpg"
+        ],
         link: "#"
       },
     ];
