--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       overflow: hidden;
       padding: 2rem 1.5rem;
       box-sizing: border-box;
+      /* Prevent horizontal overflow */
     }
 
     .carousel-slide {
@@ -166,6 +167,7 @@
       box-shadow: 0 0 6px rgba(33,150,243,0.9);
       z-index: 20;
       margin-top: 0;
+      /* Overlay image edge */
     }
 
     .carousel-arrow.left {
@@ -176,52 +178,60 @@
       right: 5%;
     }
 
-    /* Card image slider arrows */
-    .car-img-arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(33,150,243,0.7);
-      border: none;
-      color: #fff;
-      font-size: 1.5em;
-      padding: 5px 10px;
-      border-radius: 50%;
-      cursor: pointer;
-      user-select: none;
-      transition: background 0.3s;
-      box-shadow: 0 0 6px rgba(33,150,243,0.9);
-      z-index: 10;
-    }
-    .car-img-arrow.left {
-      left: 10px;
-    }
-    .car-img-arrow.right {
-      right: 10px;
-    }
-    .car-img-arrow:disabled {
-      opacity: 0.4;
-      cursor: default;
+    /* Make sure arrows overlay image, not outside carousel */
+    .carousel-container {
+      position: relative;
     }
 
-    .car-image-slider {
-      position: relative;
+    .stock-subtitle {
+      color: #fafafa;
+      font-size: 2em;
+      margin: 0 0 22px 0;
+      text-align: center;
+      font-weight: 600;
+      letter-spacing: 1px;
+    }
+
+    .click-hint {
+      text-align: center;
+      margin-bottom: 8px;
+    }
+
+    .click-hint span {
+      color: #fafafa;
+      opacity: 0.68;
+      font-size: 1em;
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    /* Showcase grid */
+    .car-showcase {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      justify-content: center;
+      margin: 2rem 0;
+    }
+
+    .car-card {
+      border: 1px solid #333;
+      border-radius: 12px;
+      padding: 1rem;
+      text-align: center;
+      background: #222;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
+    }
+
+    /* Car image slider for grid cards (smaller image) */
+    .car-card .car-image-slider img {
+      height: 250px;
       width: 100%;
       max-width: 400px;
-      margin: 0 auto 1rem;
     }
 
-    .car-image-slider img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
-      display: block;
-    }
-
-    .car-image-slider img:hover {
+    .car-card img:hover {
       transform: scale(1.04);
       box-shadow: 0 0 10px #2196f3;
     }
@@ -255,9 +265,6 @@
       .carousel-arrow.right {
         font-size: 2em;
         padding: 8px 12px;
-      }
-      .car-image-slider img {
-        height: 180px;
       }
     }
 
@@ -295,9 +302,6 @@
       .carousel-arrow.right {
         right: 10px;
         font-size: 2em;
-      }
-      .car-image-slider img {
-        height: 120px;
       }
     }
   </style>
@@ -481,8 +485,8 @@
     function createImageSlider(images, carLink, alt, imgHeight = null) {
       const slider = document.createElement('div');
       slider.className = 'car-image-slider';
+      let currentImg = 0;
 
-      // Create image element
       const img = document.createElement('img');
       img.src = images[0];
       img.alt = alt;
@@ -490,38 +494,29 @@
       img.onclick = () => { if (carLink && carLink !== "#") window.open(carLink, "_blank"); };
       slider.appendChild(img);
 
-      // Only show arrows if more than one image
       if (images.length > 1) {
-        let currentImg = 0;
-
-        // Left arrow
         const left = document.createElement('button');
         left.className = 'car-img-arrow left';
         left.setAttribute('aria-label', 'Imagem anterior');
         left.innerHTML = '&#10094;';
+        left.onclick = (e) => {
+          e.preventDefault();
+          currentImg = (currentImg - 1 + images.length) % images.length;
+          img.src = images[currentImg];
+        };
+        slider.appendChild(left);
 
-        // Right arrow
         const right = document.createElement('button');
         right.className = 'car-img-arrow right';
         right.setAttribute('aria-label', 'Próxima imagem');
         right.innerHTML = '&#10095;';
-
-        // Event handlers
-        left.addEventListener('click', function(e) {
-          e.stopPropagation();
-          currentImg = (currentImg - 1 + images.length) % images.length;
-          img.src = images[currentImg];
-        });
-        right.addEventListener('click', function(e) {
-          e.stopPropagation();
+        right.onclick = (e) => {
+          e.preventDefault();
           currentImg = (currentImg + 1) % images.length;
           img.src = images[currentImg];
-        });
-
-        slider.appendChild(left);
+        };
         slider.appendChild(right);
       }
-
       return slider;
     }
 
@@ -545,23 +540,46 @@
       carouselContainer.appendChild(slide);
     });
 
-    // Generate car cards
+    // Generate car cards (FIXED VERSION: only use createElement and appendChild)
     cars.forEach(car => {
       const card = document.createElement('div');
       card.classList.add('car-card');
+
       // Use image slider for each card (smaller image height)
       card.appendChild(createImageSlider(car.images, car.link, car.title, '250px'));
-      card.innerHTML += `
-        <div class="car-info">
-          <div class="car-title">${car.title}</div>
-          <span class="car-price">${car.price}</span>
-          <div class="car-details">
-            <span><strong>Quilómetros:</strong> ${car.kms}</span>
-            <span><strong>Ano:</strong> ${car.year}</span>
-            <span>${car.extras}</span>
-          </div>
-        </div>
-      `;
+
+      const infoDiv = document.createElement('div');
+      infoDiv.className = 'car-info';
+
+      const titleDiv = document.createElement('div');
+      titleDiv.className = 'car-title';
+      titleDiv.textContent = car.title;
+      infoDiv.appendChild(titleDiv);
+
+      const priceSpan = document.createElement('span');
+      priceSpan.className = 'car-price';
+      priceSpan.textContent = car.price;
+      infoDiv.appendChild(priceSpan);
+
+      const detailsDiv = document.createElement('div');
+      detailsDiv.className = 'car-details';
+
+      const kmsSpan = document.createElement('span');
+      kmsSpan.innerHTML = `<strong>Quilómetros:</strong> ${car.kms}`;
+      detailsDiv.appendChild(kmsSpan);
+
+      const yearSpan = document.createElement('span');
+      yearSpan.innerHTML = `<strong>Ano:</strong> ${car.year}`;
+      detailsDiv.appendChild(yearSpan);
+
+      const extrasSpan = document.createElement('span');
+      extrasSpan.textContent = car.extras;
+      detailsDiv.appendChild(extrasSpan);
+
+      infoDiv.appendChild(detailsDiv);
+
+      card.appendChild(infoDiv);
+
       carShowcase.appendChild(card);
     });
 
@@ -587,6 +605,7 @@
       showSlide(currentIndex);
     });
 
+    // Ensure carousel arrows are always vertically centered and visible after slides are added
     window.addEventListener('resize', () => showSlide(currentIndex));
     document.addEventListener('DOMContentLoaded', () => showSlide(currentIndex));
   </script>
