--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     // Cars data: "images" array for each car, first image is main image
     const cars = [
       {
-        title: "Ford Fiesta 1.25 Trend",
+        title: "Ford Fusion 1.25 X-Trend",
         price: "3.590€",
         kms: "140 677 km",
         year: "2006",
@@ -427,7 +427,7 @@
           "images/car1_extra24.jpg",
           "images/car1_extra25.jpg",
         ],
-        link: "https://www.standvirtual.com/carros/anuncio/ford-fiesta-ver-1-25-trend-ID8PSj6T.html?isPreview=1"
+        link: "#"
       },
       {
         title: "Opel Astra 1.7 CDTi Cosmo",
@@ -440,7 +440,7 @@
           "images/car2_extra1.jpg",
           "images/car2_extra2.jpg"
         ],
-        link: "https://www.standvirtual.com/carros/anuncio/opel-astra-ver-1-7-cdti-cosmo-ID8PSd30.html?isPreview=1"
+        link: "#"
       },
       {
         title: "Peugeot Peugeot Partner 1.6 HDi 100 Cv 3 Lug. Premier * Automática *",
@@ -453,7 +453,7 @@
           "images/car3_extra1.jpg",
           "images/car3_extra2.jpg"
         ],
-        link: "https://www.standvirtual.com/comerciais/anuncio/peugeot-peugeot-partner-1-6-hdi-100-cv-3-lug-premier-automtica-ID8PNI32.html?isPreview=1"
+        link: "#"
       },
       {
         title: "MINI 3 Portas One 1.4 D",
@@ -466,7 +466,7 @@
           "images/car4_extra1.jpg",
           "images/car4_extra2.jpg"
         ],
-        link: "https://www.standvirtual.com/carros/anuncio/mini-mini-3p-ver-1-4-d-ID8PSt7x.html?isPreview=1"
+        link: "#"
       },
       {
         title: "Citroën C5 Tourer 2.0 BlueHDi Seduction J17",
@@ -479,7 +479,7 @@
           "images/car5_extra1.jpg",
           "images/car5_extra2.jpg"
         ],
-        link: "https://www.standvirtual.com/carros/anuncio/citroen-c5-tourer-ver-2-0-bluehdi-seduction-j17-ID8PRV3m.html?isPreview=1"
+        link: "#"
       },
       {
         title: "Toyota Yaris 1.0 VVT-i Sol High Pack MMT",
